# smallville_rpg

./: Cargo.toml  README.md
assets/: Typical_2D_platformer_example.ldtk  Typical_TopDown_example.ldtk  ville.ldtk
assets/Typical_TopDown_example/backups/a3386460-7820-11ed-b6fd-157a63b4d02d_2023-05-29_17-52-37_crash/: Typical_TopDown_example.ldtk
src/: camera.rs  components.rs  constants.rs  inspector.rs  main.rs  map.rs  path_finder.rs  state.rs  systems.rs  units.rs
src/ai/: mod.rs  path_finder.rs  state_machine.rs
src/combat/: base.rs  melee.rs  mod.rs  projectile.rs
src/maps/: ldtk.rs  map.rs  mod.rs
src/physics/: collision.rs  mod.rs  movement.rs
src/sprites/: arm.rs  base.rs  mod.rs  movement_detection.rs  weapon.rs
src/ui/: inventory.rs  mod.rs  npc_console.rs
