[package]
name = "smallville_rpg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.10.0", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.18.3"
bevy_ecs_ldtk = "0.7.0"
bevy_rapier2d = "0.21.0"
