[package]
name = "smallville_rpg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.10.0", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.18.3"
bevy-inspector-egui-rapier = "0.9.0"
bevy_ecs_ldtk = "0.7.0"
bevy_ecs_tilemap = "0.10.0"
bevy_rapier2d = "0.21.0"
rand = "0.8.5"
seldom_map_nav = "0.4.0" # we need to remove dependency on this library and import navmesh directly in future.
sysinfo = "0.22.5"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
chatgpt_rs = "1.1.10"
tokio = { version = "1", features = ["full"] }
bevy-tokio-tasks = "0.10.2"

# reqwest = { version = "0.11.16", features = ["cookies"] }
# tokio-tungstenite = { version = "0.19.0", features = ["native-tls"] }
# tungstenite = { version = "0.19.0", features = ["native-tls"] }